<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_primary_background"
    tools:context=".view.activity.QuickSetupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        style="@style/title"
        android:text="@string/quickSetupFirstTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        style="@style/subtitle"
        android:text="@string/quickSetupFirstSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_weight="1"
        android:src="@drawable/ic_group_add_black_512dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:id="@+id/quickSetupDeclineButton"
            style="@style/bottomDoubleButton"
            app:cardBackgroundColor="@color/grey"
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/quickSetupButtonDecline"
                style="@style/buttomTextView"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/quickSetupAcceptButton"
            style="@style/bottomDoubleButton"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_width="50dp"
            android:layout_height="wrap_content" >


            <TextView
                android:text="@string/quickSetupButtonAccept"
                style="@style/buttomTextView"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>