<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:background="@drawable/gradient_primary_background"
    tools:context=".view.fragment.QuickSetupPreferenceSexOption">




    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintRoot"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/quickSetupGenderHeader"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/step1"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


             <LinearLayout
                 android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">


            <TextView
                android:id="@+id/quickSetupGenderQuestion"
                android:paddingTop="20dp"
                android:layout_gravity="center"
                style="@style/question"
                android:text="@string/quickSetupPreferenceSexOptionQuestionUserSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayoutFemale"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/iconFemale"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/female_sex_symbol_128"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    tools:ignore="NestedWeights" />


                    <TextView
                        android:id="@+id/textViewFemale"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:id="@+id/linearLayoutMale"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center"

                        android:id="@+id/iconMale"
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/male_sex_symbol_128"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/textViewMale"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:id="@+id/linearLayoutTransgender"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_gravity="center"

                        android:id="@+id/iconTransgender"
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/transgender_sex_symbol_128"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        tools:ignore="NestedWeights" />



                    <TextView
                        android:id="@+id/textViewTransgender"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>





            </LinearLayout>



        </LinearLayout>



            <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/constraintRoot"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.CardView
                    android:id="@+id/quickSetupDeclineButton"
                    style="@style/bottomDoubleButton"
                    app:cardBackgroundColor="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:text="@string/back"
                        style="@style/buttomTextView"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/quickSetupAcceptButton"
                    style="@style/bottomDoubleButton"
                    app:cardBackgroundColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" >


                    <TextView
                        android:text="@string/next"
                        style="@style/buttomTextView"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.v7.widget.CardView>


        </LinearLayout>


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</LinearLayout>